k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: web-app
  labels:
    app: redis
spec:
  clusterIP: None
  ports:
    - port: 6379
      name: redis
  selector:
    app: redis
